@@ -1,11 +1,12 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.3.1       1-14-08
+BETA PUBLIC RELEASE VERSION 1.3.1       2-22-08
 #############################################################################
  - NEW FEATURES
   * Updated html/master-index.html, deleted html/index.php.
   * Updated pydoc by running genpydoc.sh.
   * Added a whitespace option by by putting a whitespace between atom name
     and residue name.
+  * Added radius for Chlorine in ligff.py.
 
  -BUG FIXES
   * Fixed a legacy bug with the web server (web server doesn't like ligand 
